--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@twilson63/palmetto-couchdb": "^1.0.5",
     "angular": "^1.4.7",
     "angular-storage": "0.0.13",
-    "angular-ui-router": "^0.2.15",
+    "body": "^5.1.0",
     "ecstatic": "^1.1.3",
     "http-hash-router": "^1.1.0",
     "hyperscript": "^1.4.7",
-    "palmettoflow-api-route": "^1.0.0",
-    "palmettoflow-event": "^1.1.2"
+    "palmettoflow-event": "^1.1.2",
+    "send-data": "^7.0.0"
+  },
+  "engines": {
+    "node": "^4.x",
+    "npm": "^3.x"
   }
 }
